# swagger.yaml
@@ -60,6 +60,8 @@ paths:
               pushToken:
                 type: "string"
                 example: "GRTo4JUvDwEzJogb"
+      security: 
+        - apiKey: []
       responses:
         200:
           description: ok
@@ -79,6 +81,8 @@ paths:
           type: string
           required: true
           description: 長いハッシュ値
+      security: 
+        - apiKey: []
       summary: "メッセージの一覧が取ってこれるよ"
       description: "一覧が頑張るよ"
       responses:
@@ -107,6 +111,8 @@ paths:
           name: body
           schema:
             $ref: '#/definitions/messageRequest'
+      security: 
+        - apiKey: []
       responses:
         200:
           description: ok
@@ -121,6 +127,8 @@ paths:
       tags:
         - "messages"
       summary: メッセージの取得
+      security: 
+        - apiKey: []
       responses:
         200:
           description: ok
@@ -142,6 +150,8 @@ paths:
       tags:
         - "chatrooms"
       summary: "全部既読にするやつ"
+      security: 
+        - apiKey: []
       responses:
         200:
           description: ok
@@ -164,12 +174,13 @@ paths:
                 channelName: "name"
               }
         '
-
       parameters:
         - in: body
           name: body
           schema:
             $ref: '#/definitions/chatroomRequest'
+      security: 
+        - apiKey: []       
       responses:
         200:
           description: ok
@@ -198,7 +209,8 @@ paths:
         - in: query
           name: "channelName"
           type: string
-
+      security: 
+        - apiKey: []
       responses:
         200:
           description: ok
